vspfilter: Add a new plugin converting colorspace and video size with VSP1 V4L2
This plugin's implementation had been built in the videoconvert plugin
as a trial version. The implementation has been copied into this
new plugin.

--- a/configure.ac
+++ b/configure.ac
@@ -424,6 +424,7 @@ AG_GST_CHECK_PLUGIN(audiorate)
 AG_GST_CHECK_PLUGIN(audiotestsrc)
 AG_GST_CHECK_PLUGIN(encoding)
 AG_GST_CHECK_PLUGIN(videoconvert)
+AG_GST_CHECK_PLUGIN(vspfilter)
 AG_GST_CHECK_PLUGIN(gio)
 AG_GST_CHECK_PLUGIN(playback)
 AG_GST_CHECK_PLUGIN(audioresample)
@@ -833,6 +834,7 @@ gst/audiorate/Makefile
 gst/audiotestsrc/Makefile
 gst/encoding/Makefile
 gst/videoconvert/Makefile
+gst/vspfilter/Makefile
 gst/gio/Makefile
 gst/playback/Makefile
 gst/audioresample/Makefile
