Set a default video converter by ./configure script
This patch determines which a video converter plugin we use.

--- a/gst/playback/Makefile.am
+++ b/gst/playback/Makefile.am
@@ -1,6 +1,6 @@
 plugin_LTLIBRARIES = libgstplayback.la
 
-csp_cflags = -DCOLORSPACE=\"videoconvert\"
+csp_cflags = -DCOLORSPACE=\"@DEFAULT_CNV@\"
 
 libgstplayback_la_SOURCES = \
 	gstdecodebin2.c \
