vspfilter: Override the transform function of the GstBaseTransfrom class
The gst_vsp_filter_transform() function sets a dmafd descriptor obtained
by gst_dmabuf_memory_get_fd() to an output GstVspFilterFrame.
When the output GstBuffer passed through this function does not have
a dmabuf descriptor, the input and output buffers are mapped as a
default behavior.

This is preliminary for the dmabuf handling support.

--- a/gst/vspfilter/Makefile.am
+++ b/gst/vspfilter/Makefile.am
@@ -6,6 +6,7 @@ libgstvspfilter_la_CFLAGS = \
 	$(GST_CFLAGS)
 libgstvspfilter_la_LIBADD = \
 	$(top_builddir)/gst-libs/gst/video/libgstvideo-$(GST_API_VERSION).la \
+	$(top_builddir)/gst-libs/gst/allocators/libgstallocators-$(GST_API_VERSION).la \
 	$(GST_BASE_LIBS) \
 	$(GST_LIBS)
 libgstvspfilter_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
